force-app/main/default/objects/Stg_Calendar_Dates__c.object
<CustomObject>
    <fields>
        <fullName>Calendar_Code__c</fullName>
        <label>Calendar Code</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calendar_Date_Unique_Key__c</fullName>
        <formula>Calendar_Code__c + Name +  TEXT(Date_Sequence_Nbr__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calendar Date Unique Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Sequence_Nbr__c</fullName>
        <label>Date Sequence Number</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Type_Description__c</fullName>
        <label>Date Type Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Value__c</fullName>
        <label>Date Value</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Job_Code__c</fullName>
        <label>Job Code</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Status__c</fullName>
        <label>Record Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Stg Calendar Date</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Calendar_Code__c</columns>
        <columns>Date_Sequence_Nbr__c</columns>
        <columns>Date_Type_Description__c</columns>
        <columns>Date_Value__c</columns>
        <columns>Job_Code__c</columns>
        <columns>Record_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Job_Filter</fullName>
        <columns>NAME</columns>
        <columns>Calendar_Code__c</columns>
        <columns>Date_Sequence_Nbr__c</columns>
        <columns>Date_Type_Description__c</columns>
        <columns>Date_Value__c</columns>
        <columns>Job_Code__c</columns>
        <columns>Record_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Calendar_Date_Unique_Key__c</field>
            <operation>equals</operation>
            <value>12005_12186CRS-START1</value>
        </filters>
        <label>Job Filter</label>
    </listViews>
    <nameField>
        <label>Date Type Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stg Calendar Dates</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>